<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InstallUpdateTestApp2</string>
    <string name="content_path">Content Path</string>
    <string name="default_content_path">/data/local/tmp/out.zip</string>
    <string name="trigger_install">Request Install</string>
    <string name="trigger_uninstall">Request Uninstall</string>
    <string name="trigger_nothing">Request Nothing</string>
    <string name="success">Success</string>
    <string name="get_rules_state">Get rules state</string>
</resources>
