<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_path"
            android:id="@+id/content_path_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_content_path"
            android:id="@+id/content_path" />

    </LinearLayout>

    <Button
        android:id="@+id/trigger_install_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/trigger_install" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF00FF00" />

    <Button
        android:id="@+id/trigger_uninstall_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/trigger_uninstall" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF00FF00" />

    <CheckBox android:id="@+id/success_checkbox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/success" />

    <Button
        android:id="@+id/trigger_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/trigger_nothing" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF00FF00" />

    <Button
        android:id="@+id/get_rules_state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/get_rules_state" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF00FF00" />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/log"
                android:singleLine="false" />

    </ScrollView>

</LinearLayout>
